bat.bool1.posneg.PosNeg.scala.error
Erreur de compilation :
PosNeg:5: error: type mismatch;
 found   : Unit
 required: Boolean
  } else if (c>0 && negative){
         ^